--- a/secrets.toml
+++ b/secrets.toml
@@ -1,6 +1,6 @@
 # .streamlit/secrets.toml
 
-server = "localhost"
-database = "mydb"
-username = "SA"
-password = "xxx"
+server = "172.16.16.152,52920"
+database = "DATA311EXP"
+username = "D311"
+password = "D311#123"
